2013-06-06  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* rcsc/player/world_model.cpp:
	- ボール速度推定の不具合を修正

	* rcsc/action/kick_table.cpp:
	- キャッシュしておくパスの最大数を256から1024に変更
	- デバッグ出力用の関数追加

2013-06-04  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* rcsc/player/self_intercept_simulator.cpp:
	- 同一タイプか比較する関数にActionTypeの一致を判定する条件を追加

	* rcsc/player/self_intercept_simulator.cpp:
	- 体の向きの計算誤りを修正

	* rcsc/player/world_model.cpp:
	- 3ステップの位置差分によるボール速度の信頼性を2から3に変更

2013-06-02  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* rcsc/player/world_model.cpp:
	- 自分がボールを蹴っている場合は位置差分による強制ボール速度更新を
	適用しないように条件を追加

	* rcsc/action/body_intercept2009.cpp:
	* rcsc/player/intercept_table.cpp:
	* rcsc/player/intercept_table.h:
	* rcsc/player/self_intercept_simulator.cpp:
	* rcsc/player/self_intercept_v13.cpp:
	- InterceptInfo::ModeをInterceptInfo::StaminaTypeへリネーム
	- InterceptInfo::TypeをInterceptInfo::ActionTypeへリネーム
	- InterceptInfoのステップ数取得関数としてreachStep(), turnStep(),
	dashStep()を追加．既存のxxxCycle()も利用可能

	* rcsc/player/self_intercept_simulator.cpp:
	- ターン回数0の場合にダッシュパワーが逆方向にセットされることがあっ
	たバグを修正

	* rcsc/player/ball_object.cpp:
	* rcsc/player/intercept_table.cpp:
	* rcsc/player/world_model.cpp:
	- キッカブルなプレイヤが存在してもすべてのプレイヤに対してインター
	セプト予測計算を実行するように変更
	- デバッグメッセージ出力抑制

2013-06-01  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* rcsc/player/self_intercept_simulator.cpp:
	- キーパーの場合はキャッチ可能エリアを縮小しない設定に変更
	- スタミナの比較が逆だったバグを修正

2013-05-31  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* rcsc/player/self_intercept_simulator.cpp:
	- ターンダッシュのシミュレーションを最後まで実行するように変更

	* rcsc/action/neck_turn_to_player_or_scan.cpp:
	- 代替のNeck_TurnToBallOrScanを実行する場合に，敵がボールキッカブ
	ルブルであればしきい値を-1に設定するように変更

	* rcsc/player/world_model.cpp:
	- ボールが十分近い場合は位置の差分でボール速度情報を更新するように変更

	* rcsc/action/basic_actions.cpp:
	- 現在のボール位置が直接観測できていない場合は，次ステップで
	visibleDistanceに入りそうでもボールを直接観ることを優先するように
	条件を追加

2013-05-30  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* rcsc/player/player_agent.cpp:
	- 意思決定に要した時間をデバッグサーバへ送信するコードを追加
